--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
 		"bootstrap": "^4.1.3",
 		"events": "^1.1.1",
 		"jquery": "^3.3.1",
+		"moment": "^2.22.2",
 		"popper.js": "^1.12.9",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
 		"react": "^16.5.2",
-		"react-polyfills": "0.0.1",
 		"react-dom": "^16.5.2",
+		"react-moment": "^0.8.3",
+		"react-polyfills": "0.0.1",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1"
 	}
